# StarshipAutoBattler

./: .config  .env  .gitignore  README.md  Starship-Auto-Battler.txt  pyproject.toml  sab.db
apps/console/: main.py
apps/console/clients/: auth_client.py  client.py  config_client.py  game_client.py  player_client.py
apps/console/core/models/menus/: game_menu.py  main_menu.py
apps/console/core/services/: auth_service.py
apps/console/core/utils/: constants.py
apps/console/models/menus/: auth_menu.py  game_menu.py  main_menu.py  menu.py
apps/console/services/: auth_service.py  game_service.py
apps/console/utils/: console_helpers.py  constants.py
src/: config.py
src/core/models/: __init__.py
src/core/services/: auth_service.py  config_service.py  database_service.py  logger_service.py
src/game/models/: __init__.py  player_character.py
src/models/: player_character.py  user.py
src/services/: auth_service.py  config_service.py  database_service.py  game_service.py  logger_service.py  player_service.py  service.py
src/utils/: constants.py
